--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "to_do_app_frontend",
-    "homepage": "https://Lucvincent123.github.io/to_do_app_frontend/",
+    "homepage": "https://lucvincent123.github.io/to_do_app_frontend/",
     "version": "0.0.0",
     "type": "module",
     "scripts": {
