--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,12 +21,9 @@ jobs:
 
       - name: Build with environment variables
         env:
-          API_URL: ${{ secrets.API_URL }}
+          VITE_API_UR: ${{ secrets.VITE_API_UR }}
           FEATURE_FLAG: "true"
         run: npm run build
 
       - name: Deploy
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./dist
+        run: npm run deploy
