--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,29 +1,29 @@
 name: Deploy to GitHub Pages
 
 on:
-  push:
-    branches: [main]
+    push:
+        branches: [main]
 
 jobs:
-  build-deploy:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+    build-deploy:
+        runs-on: ubuntu-latest
+        steps:
+            - name: Checkout code
+              uses: actions/checkout@v4
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: 20
+            - name: Set up Node.js
+              uses: actions/setup-node@v4
+              with:
+                  node-version: 20
 
-      - name: Install dependencies
-        run: npm install
+            - name: Install dependencies
+              run: npm install
 
-      - name: Build with environment variables
-        env:
-          VITE_API_UR: ${{ secrets.VITE_API_UR }}
-          FEATURE_FLAG: "true"
-        run: npm run build
+            - name: Build with environment variables
+              env:
+                  VITE_API_URL: ${{ secrets.VITE_API_URL }}
+                  FEATURE_FLAG: 'true'
+              run: npm run build
 
-      - name: Deploy
-        run: npm run deploy
+            - name: Deploy
+              run: npm run deploy
